feat(cliente): agregar campo sexo al modelo y DTO de cliente
- Agrega campo 'sex' de tipo enumerado al modelo Customer
- Expone el campo sexo en CustomerDTO para la API
- Refactoriza TestConfig para usar Set<Parameter> en lugar de List para evitar duplicados
- Actualiza TestConfigServiceImp para trabajar con Set en la resolución de parámetros